# django-rest-models

./: .gitignore  .travis.yml  .venv  CONTRIBUTING.rst  LICENSE.md  MANIFEST.in  README.rst  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt  test_runner.py  testsettings.py  testsettings_psql.py  tox.ini
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: Makefile
docs/source/: conf.py  index.rst  middlewares.rst  models.rst  quickstart.rst  settings.rst  special_case.rst  testing.rst
rest_models/: __init__.py  checks.py  router.py  storage.py  test.py  tests.py  utils.py
rest_models/backend/: __init__.py  auth.py  base.py  client.py  compiler.py  connexion.py  creation.py  exceptions.py  features.py  introspection.py  middlewares.py  operations.py  schema.py  utils.py
rest_models/backend/exec/: resty
rest_models/tests/: __init__.py  test_clients.py  test_introspection.py  test_middlewares.py  test_restmodeltestcase.py  test_routers.py  test_systemcheck.py  test_utils.py  tests_build_params.py  tests_compilers.py  tests_connexion.py  tests_queryset.py  tests_routers.py  tests_tools.py  tests_upload_files.py
testapi/: admin.py  models.py  serializers.py  urls.py  viewset.py
testapi/badapi/: models.py  serializers.py  urls.py  viewset.py
testapi/fixtures/: data.json  restaurant.json  user.json
testapi/migrations/: 0001_initial.py  0002_review.py
testapp/: __init__.py  models.py  tests.py
testapp/badapp/: models.py
testapp/migrations/: 0001_initial.py  0002_review.py
testappsimple/: models.py
(+12 files in other folders)
